# PixelFlux

./: .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .markdownlintignore  .vale.ini  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  Taskfile.yml  flake.nix  lefthook.yml  lychee.toml  rust-toolchain.toml  treefmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
PixelPush/: Cargo.toml  README.md
PixelPush/src/: main.rs
api/: README.md  contract.hurl  openapi.yaml
argocd/: README.md  application.yaml
cluster/: config.env.example  k3d-dev.sh  k3d-down.sh  k3d-up.sh  k3s-down.sh  k3s-up.sh
cluster/ghcr-pull/: README.md  github-app-credentials.example.yaml  refresher.yaml
docs/adr/: 0001-nix-for-devshell-and-container.md  0002-distroless-nonroot-container.md  0003-redis-canvas-and-pubsub.md  0004-sse-over-websockets.md  0005-kubernetes-traefik-deployment.md  0006-mdbook-docs.md  README.md  template.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  admin.md  agents.md  api.md  architecture.md  getting-started.md  introduction.md  testing.md
docs/book/src/adr/: 0001.md  0002.md  0003.md  (+4 more)
docs/slides/: overview.md
docs/slides/theme/: pixelflux.css
k8s/: README.md  hpa.yaml  ingressroute-tls.yaml  ingressroute.yaml  kustomization.yaml  pixelflux.yaml  redis.yaml  traefik-acme.yaml
load/: README.md  health.js
scripts/: generate_kim.py  paint_image.py
src/: admin.html  index.html  lib.rs  main.rs
tests/: integration.rs
(+3 files in other folders)
